[gd_scene load_steps=6 format=3 uid="uid://c1q12be6jjyek"]

[ext_resource type="Script" path="res://scripts/weapons/default_laser.gd" id="1_24mmu"]
[ext_resource type="Texture2D" uid="uid://c868sysa766fa" path="res://assets/textures/projectiles/default-laser.png" id="2_lky23"]
[ext_resource type="PackedScene" uid="uid://c3atqdge540t0" path="res://components/status/hitbox_component.tscn" id="3_5k8xg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jewc2"]
radius = 4.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_43gnj"]
radius = 2.0
height = 36.0

[node name="DefaultLaser" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_24mmu")
projectile_speed = 700

[node name="LaserSprite" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.397513, 1)
texture = ExtResource("2_lky23")

[node name="SelfHitbox" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jewc2")
disabled = true

[node name="OutsideScreenCheck" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-67, 0)
scale = Vector2(0.3, 0.55)

[node name="HitboxComponent" parent="." instance=ExtResource("3_5k8xg")]
collision_layer = 4
collision_mask = 10

[node name="SelfProjectileBox" type="CollisionShape2D" parent="HitboxComponent"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_43gnj")

[connection signal="screen_exited" from="OutsideScreenCheck" to="." method="_on_outside_screen_check_exit_detected"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_area_entered"]
